Dark Frogs and Cerulean Froglights

--- a/src/main/resources/assets/instantfeedback/lang/en_us.json
+++ b/src/main/resources/assets/instantfeedback/lang/en_us.json
@@ -3,5 +3,6 @@
   "block.instantfeedback.carved_pale_pumpkin": "Carved Pale Pumpkin",
   "block.instantfeedback.pale_bush": "Pale Bush",
   "block.instantfeedback.tall_pale_bush": "Tall Pale Bush",
-  "block.instantfeedback.pale_rose": "Pale Rose"
+  "block.instantfeedback.pale_rose": "Pale Rose",
+  "block.instantfeedback.cerulean_froglight": "Cerulean Froglight"
 }
