Add potted pale rose translations
resolves #19

--- a/src/main/resources/assets/instantfeedback/lang/de_de.json
+++ b/src/main/resources/assets/instantfeedback/lang/de_de.json
@@ -4,5 +4,6 @@
   "block.instantfeedback.pale_bush": "Blassbusch",
   "block.instantfeedback.tall_pale_bush": "Hoher Blassbusch",
   "block.instantfeedback.pale_rose": "Blassrose",
-  "block.instantfeedback.cerulean_froglight": "Himmelblaues Froschlicht"
+  "block.instantfeedback.cerulean_froglight": "Himmelblaues Froschlicht",
+  "block.instantfeedback.potted_pale_rose": "Eingetopfte Blassrose"
 }
