--- a/src/main/resources/assets/instantfeedback/lang/en_us.json
+++ b/src/main/resources/assets/instantfeedback/lang/en_us.json
@@ -4,5 +4,6 @@
   "block.instantfeedback.pale_bush": "Pale Bush",
   "block.instantfeedback.tall_pale_bush": "Tall Pale Bush",
   "block.instantfeedback.pale_rose": "Pale Rose",
-  "block.instantfeedback.cerulean_froglight": "Cerulean Froglight"
+  "block.instantfeedback.cerulean_froglight": "Cerulean Froglight",
+  "block.instantfeedback.potted_pale_rose": "Potted Pale Rose"
 }
