--- a/src/main/resources/assets/instantfeedback/lang/pt_br.json
+++ b/src/main/resources/assets/instantfeedback/lang/pt_br.json
@@ -4,5 +4,6 @@
   "block.instantfeedback.pale_bush": "Arbusto pálido",
   "block.instantfeedback.tall_pale_bush": "Arbusto pálido alto",
   "block.instantfeedback.pale_rose": "Rosa pálida",
-  "block.instantfeedback.cerulean_froglight": "Anfibrilho cerúlea"
+  "block.instantfeedback.cerulean_froglight": "Anfibrilho cerúlea",
+  "block.instantfeedback.potted_pale_rose": "Rosa pálida envasade"
 }
