--- a/src/main/resources/assets/instantfeedback/lang/pt_br.json
+++ b/src/main/resources/assets/instantfeedback/lang/pt_br.json
@@ -1,9 +1,9 @@
 {
-  "block.instantfeedback.pale_pumpkin": "Abóbora pálida",
-  "block.instantfeedback.carved_pale_pumpkin": "Abóbora pálida esculpida",
-  "block.instantfeedback.pale_bush": "Arbusto pálido",
-  "block.instantfeedback.tall_pale_bush": "Arbusto pálido alto",
-  "block.instantfeedback.pale_rose": "Rosa pálida",
-  "block.instantfeedback.cerulean_froglight": "Anfibrilho cerúlea",
-  "block.instantfeedback.potted_pale_rose": "Rosa pálida envasade"
+  "block.instantfeedback.pale_pumpkin": "Abóbora Pálida",
+  "block.instantfeedback.carved_pale_pumpkin": "Abóbora Pálida Esculpida",
+  "block.instantfeedback.pale_bush": "Arbusto Pálido",
+  "block.instantfeedback.tall_pale_bush": "Arbusto Pálido Alto",
+  "block.instantfeedback.pale_rose": "Rosa Pálida",
+  "block.instantfeedback.cerulean_froglight": "Anfibrilho Cerúlea",
+  "block.instantfeedback.potted_pale_rose": "Rosa Pálida Envasada"
 }
